--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Our Glorious Node Project</title>
+    <title>Librario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <h1>A wild webpage appears...</h1>
+    <h1>Librario</h1>
     <div id="list-container"></div>
 
     <script id="list-template" type="text/x-handlebars-template">
