Added public JS file to store all JS code for project. Project now able to render data from the server.

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,24 @@
     <title>Librario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
+  
   <body>
     <h1>Librario</h1>
     <div id="list-container"></div>
 
     <script id="list-template" type="text/x-handlebars-template">
-      {{#each list}}
-      <div class="row">
-        <div class="col-xs-6"><strong>{{name}}</strong></div>
-        <div class="col-xs-6">{{value}}</div>
-      </div>
-      {{/each}}
+      <ul class="list-group">
+        {{#each files}}
+        <li class="list-group-item">
+          <strong>{{title}}</strong> - {{description}}
+        </li>
+        {{/each}}
+      </ul>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.8/handlebars.min.js"></script>
+    <script src="/js/app.js"></script>
 
     <script>
       $(document).ready(function() {
@@ -29,23 +32,8 @@
         const greetingRendered = greetingCompiled(data);
     
         $('body h1').first().after(greetingRendered);
-      });
-    </script>
 
-    <script>
-      $(document).ready(function() {
-        const data = {
-          list: [
-            {name: 'Buffy', value: 'Slayer, guidance counselor'},
-            {name: 'Willow', value: 'Witch'},
-            {name: 'Xander', value: 'Dude, construction worker'},
-            {name: 'Giles', value: 'Watcher, Librarian'},
-          ],
-        };
-
-        const template = $('#list-template').html();
-        const compiled = Handlebars.compile(template);
-        $('#list-container').html(compiled(data));
+        refreshFileList();
       });
     </script>
 
