--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,18 @@
       <button id="add-file-button" class="btn btn-primary" onclick="toggleAddFileForm()">Add File</button>
       <div id="form-container" class="panel hidden">
         <form id="add-file-form">
-            <div class="form-group">
-              <label for="file-title">Title</label>
-              <input type="text" class="form-control" id="file-title" placeholder="Title">
-            </div>
-            <div class="form-group">
-              <label for="file-description">Description</label>
-              <input type="text" class="form-control" id="file-description" placeholder="Description">
-            </div>
-            <button type="button" onclick="submitFileForm()" class="btn btn-success">Submit</button>
-            <button type="button" onclick="cancelFileForm()" class="btn btn-link">cancel</button>
-          </form>
+          <input type="hidden" id="file-id" value="" />
+          <div class="form-group">
+            <label for="file-title">Title</label>
+            <input type="text" class="form-control" id="file-title" placeholder="Title">
+          </div>
+          <div class="form-group">
+            <label for="file-description">Description</label>
+            <input type="text" class="form-control" id="file-description" placeholder="Description">
+          </div>
+          <button type="button" onclick="submitFileForm()" class="btn btn-success">Submit</button>
+          <button type="button" onclick="cancelFileForm()" class="btn btn-link">cancel</button>
+        </form>
       </div>
     </div>
 
@@ -32,6 +33,9 @@
         {{#each files}}
         <li class="list-group-item">
           <strong>{{title}}</strong> - {{description}}
+          <span class="pull-right">
+            <button type="button" class="btn btn-xs btn-default" onclick="editFileClick('{{_id}}')">Edit</button>
+          </span>
         </li>
         {{/each}}
       </ul>
