Added Delete button updated model, handlers, and functions to hanlde the functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
           <strong>{{title}}</strong> - {{description}}
           <span class="pull-right">
             <button type="button" class="btn btn-xs btn-default" onclick="editFileClick('{{_id}}')">Edit</button>
+            <button type="button" class="btn btn-xs btn-danger" onclick="deleteFileClick('{{_id}}')">Del</button>
           </span>
         </li>
         {{/each}}
