Updated table to include Series field, minor changes to css, added README file.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="container">
-      <h1>Your Books</h1>
+      <h2>Your Books</h2>
       <div id="list-container"></div>
       <button id="add-book-button" class="btn btn-primary" onclick="toggleAddBookForm()">Add Book</button>
       <!-- Beginning of Form -->
@@ -28,6 +28,10 @@
             <label for="book-author">Author</label>
             <input type="text" class="form-control" id="book-author" placeholder="Author">
           </div>
+          <div class="form-group">
+            <label for="book-series">Series</label>
+            <input type="text" class="form-control" id="book-series" placeholder="Series">
+          </div>
           <button type="button" onclick="submitBookForm()" class="btn btn-success">Submit</button>
           <button type="button" onclick="cancelBookForm()" class="btn btn-warning">Cancel</button>
         </form>
@@ -35,27 +39,13 @@
       <!-- End of Form -->
     </div>
 
-    
-    <!-- <script id="list-template" type="text/x-handlebars-template">
-      <ul class="list-group">
-        {{#each books}}
-        <li class="list-group-item">
-          <strong>{{title}}</strong> - {{author}}
-          <span class="pull-right">
-            <button type="button" class="btn btn-xs btn-info" onclick="editBookClick('{{_id}}')">Edit</button>
-            <button type="button" class="btn btn-xs btn-danger" onclick="deleteBookClick('{{_id}}')">Remove</button>
-          </span>
-        </li>
-        {{/each}}
-      </ul>
-    </script> -->
-
     <script id="list-template" type="text/x-handlebars-template">
       <table class="table">
         <thead>
           <tr>
             <th scope="col">Title</th>
             <th scope="col">Author</th>
+            <th class="hidden-xs" scope="col">Series</th>
           </tr>
         </thead>
         <tbody>
@@ -63,6 +53,7 @@
             <tr>
               <td>{{title}}</td>
               <td>{{author}}</td>
+              <td class="hidden-xs">{{series}}</td>
               <td>
                 <button type="button" class="btn btn-xs btn-info" onclick="editBookClick('{{_id}}')">Edit</button>
                 <button type="button" class="btn btn-xs btn-danger" onclick="deleteBookClick('{{_id}}')">Remove</button>
@@ -79,18 +70,9 @@
 
     <script>
       $(document).ready(function() {
-        // const data = { name: "Code Louisvillains" }
-        // const greetingTemplate = 'Hello {{name}}! I am a template!';
-        // const greetingCompiled = Handlebars.compile(greetingTemplate);
-        // const greetingRendered = greetingCompiled(data);
-    
-        // $('body h1').first().after(greetingRendered);
-
         refreshBookList();
       });
     </script>
 
   </body>
 </html>
-
-<!-- Photo by Janko Ferlič on Unsplash -->
