Added additional CSS changes to the website header and updated README file with additional details.

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <title>Librario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    
   </head>
   
   <body>
     <header id="top" class="main-header">
-      <h1 class="title">Welcome to Librario</h1>
+      <h1 class="title">Welcome to <span class="title-font">Librario</span></h1>
     </header>
 
     <div class="container">
