--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
       <!-- End of Form -->
     </div>
 
+    <!-- Beginning of table -->
     <script id="list-template" type="text/x-handlebars-template">
       <table class="table">
         <thead>
@@ -65,6 +66,7 @@
         </tbody>
       </table>
     </script>
+    <!-- End of table -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.8/handlebars.min.js"></script>
